--- a/articles/rfi/999972.md
+++ b/articles/rfi/999972.md
@@ -1,5 +1,5 @@
-<!--1713552301000-->
-[美众院即将投票对乌援助法案 五角大楼：有些军援几天内就能运抵乌克兰](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88-%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC-%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0)
+<!--1713552302000-->
+[美国众院调查发现华尔街向黑名单内的中国公司输送了数十亿美元](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83)
 ------
 
-<div>19/04/2024 - 20:25</div><img src="https://s.rfi.fr/media/display/48c829c8-fe77-11ee-9ad8-005056a90284/w:1280/p:16x9/AP24109824140967.jpg"><p><strong>据两位美国官员透露，五角大楼正准备迅速批准一项对乌克兰的武器援助计划，其中包括急需的火炮和防空系统，此刻正值美国国会正在排队投票以通过对乌的额外军援拨款。        </strong></p><div><p>上述两位美国官员向政客新闻网表示，拜登政府尚未最终决定这批资金的规模和内容，他们因涉及敏感的内部讨论而被允许匿名。但其中一位官员说，五角大楼官员正在努力汇总一揽子美国装备，一旦立法通过并经总统签署，就能迅速通过官僚程序。该官员说：“他们将很快向（奥斯汀）防长提出建议，随后很快就会提交给总统”。</p><p>两位官员说，这笔资金将包括用于补充乌克兰武器库的火炮和防空系统，这将是美国自去年12月因国会对总统追加援助的要求停滞不前而耗尽资金以来的第二笔资金。白宫上个月批准了一项总额为3亿美元的对乌紧急援助计划，使用的是之前合同节省下来的成本。</p><p>第一位官员说，许多美国武器已经存放在欧洲各地的仓库中，可以立即运往乌克兰。有些物资几天内就能运抵乌克兰，有些则可能需要数周时间。</p><p>美国国防部发言人莱德（Patrick Ryder）少将拒绝透露即将到来的一揽子计划的具体内容，但在周四告诉记者，美国拥有“非常强大的物流网络，使我们能够非常迅速地运送物资”——可能在几天之内。莱德说，“我们当然理解并重视这种紧迫性，并已做好迅速行动的准备”。</p><p>美国众议院即将于周六就四项法案进行投票，这些法案将拨款950亿美元用于援助乌克兰、以色列和印太地区的合作伙伴。一旦获得通过，参议院还必须在拜登签署之前批准该援助方案。在用于乌克兰的近610亿美元中，约480亿美元将拨给五角大楼，用于武装基辅、补充武器和支付在欧洲的军事行动。该法案为美军提供了232亿美元，用于补充提供给乌克兰的武器装备库存。</p><p>另有138亿美元将用于“乌克兰安全援助计划”，供五角大楼为基辅购买新武器。还有113亿美元将用于加强在欧洲的美军行动。该立法重新授权五角大楼将价值78亿美元的现有武器从库存中运往乌克兰，然后由一揽子计划中增加的资金取代。</p><p>美国国防部负责国际安全事务的助理防长沃兰德（Celeste Wallander）最近告诉议员们，一旦国会最终批准援助，五角大楼将迅速开始运送弹药、炮弹和防空武器。</p><p>沃兰德对美国众议院军事委员会说：“在（美国欧洲司令部）和（美国运输司令部）的支持下，我们将能够在一两周内立即开始向乌克兰提供弹药、炮弹和拦截器”。</p><p>拜登政府多名高官本周强调，如果美国国会不通过额外拨款，乌克兰将很快陷入困境。美国中情局局长比尔·伯恩斯（Bill Burns）说，如果没有美国的新武器援助，乌克兰可能在今年年底前被击败。</p><p>美国国防部长奥斯汀（Lloyd Austin）则告诉议员们，在乌军苦于弹药短缺之际，俄军正在取得进展。奥斯汀指出：“我们已经看到战场上的局势开始向对俄罗斯有利的方向转变。我们看到他们正在逐步取得进展。我们看到乌克兰人在坚守阵地方面受到了挑战”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4K.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E4%25BC%2597%25E9%2599%25A2%25E5%258D%25B3%25E5%25B0%2586%25E6%258A%2595%25E7%25A5%25A8%25E5%25AF%25B9%25E4%25B9%258C%25E6%258F%25B4%25E5%258A%25A9%25E6%25B3%2595%25E6%25A1%2588-%25E4%25BA%2594%25E8%25A7%2592%25E5%25A4%25A7%25E6%25A5%25BC-%25E6%259C%2589%25E4%25BA%259B%25E5%2586%259B%25E6%258F%25B4%25E5%2587%25A0%25E5%25A4%25A9%25E5%2586%2585%25E5%25B0%25B1%25E8%2583%25BD%25E8%25BF%2590%25E6%258A%25B5%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4K.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 14:23</div><img src="https://s.rfi.fr/media/display/ac5979d4-da04-11ee-ba46-005056a90284/w:1280/p:16x9/AP24058715129409.jpg"><p><strong>美国国会一项调查发现，华尔街动用了数十亿美元的美国退休储蓄和其他投资来购买“指数基金”股票，其中50%以上是被华盛顿列入黑名单的中国公司。        </strong></p><div><p>据华尔街日报4月18日报道，由两党组成的美国众议院中共问题特别委员会被受权为美国制定对抗中国的战略，其一项调查重点是全球最大的资产管理公司贝莱德（BlackRock）和股票指数编制公司摩根士丹利资本国际公司（MSCI）。</p><p>该调查是对美国金融机构如何为投资中国公司提供便利的一次广泛审查，美国政府指责这些公司加强了中国的军事力量并侵犯了人权。</p><p>众议院中共问题特别委员会没有立法权，但在报告中敦促美国立法者在中美竞争加剧之际限制此类资本流动。该委员会在周四发布的报告中表示：“可能令许多美国人感到惊讶的是，这种活动并不违法。”</p><p>上述资本国际公司表示，它们没有违反任何法律，并坚称它们几乎没有自由裁量权将中国实体独立排除在指数基金之外。</p><p>华日的这个报道说，多年来，美国的金融家一直是中国在华盛顿的最亲密盟友。但随着中国长达数十年的繁荣逐渐结束，美国投资者正从这个世界第二大经济体撤退。来自华盛顿的政治压力不断加大，即使中国的经济状况有所改善，企业很可能难以扭转颓势。美国一些大型养老基金已经少了在中国的投资，或停止了在中国的新投资。</p><p>美国国会众议院中共问题特别委员会在报告中总结称，通过投资“指数”基金，美国金融机构去年向大约63家被美国盯上的中国公司输送了65亿美元，其中包括“航空航天”和“国防企业集团”“中国航空工业集团”、“基因组学公司华大基金（BGI）和互联网安全公司奇虎360。</p><p>这个委员会的报告称，摩根士丹利资本国际公司（MSCI）通过将这些中国公司纳入指数，为 37 亿美元的投资提供了便利。报告指出，贝莱德通过跟踪这些指数的基金投资了至少19亿美元。</p><p>国会委员会讨论的问题涉及贝莱德（BlackRock）等资产管理公司，这些公司利用摩根士丹利资本国际公司（MSCI）编制的指数为养老金、大学捐赠基金和其他长期投资者建立投资组合。虽然贝莱德等公司只是通过指数基金购买了被列入黑名单的中国公司的股票，MSCI 也没有向它们提供资金，但国会委员会的调查认为，这些公司帮助将美国人的储蓄引入相关的中国公司。</p><p>与这些公司的规模相比，金额相对较小。但这一发现涉及到一场政治辩论的核心，这场辩论在美国总统大选前夕可能会愈演愈烈：包括美国对中国的强硬立场，以及被视为促进了中国经济增长的美国公司。</p><p>华日的这个报道说，唐纳德-特朗普（Donald Trump）正在与拜登总统（President Biden）争夺重返白宫的机会，如果特朗普赢得总统竞选，他将提出大幅限制中国进入美国市场的想法。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWzc.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E9%2599%25A2%25E8%25B0%2583%25E6%259F%25A5%25E5%258F%2591%25E7%258E%25B0%25E5%258D%258E%25E5%25B0%2594%25E8%25A1%2597%25E5%2590%2591%25E9%25BB%2591%25E5%2590%258D%25E5%258D%2595%25E5%2586%2585%25E7%259A%2584%25E4%25B8%25AD%25E5%259B%25BD%25E5%2585%25AC%25E5%258F%25B8%25E8%25BE%2593%25E9%2580%2581%25E4%25BA%2586%25E6%2595%25B0%25E5%258D%2581%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83%20-%20https%3A%2F%2Frfi.my%2FAWzc.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83%20-%20https%3A%2F%2Frfi.my%2FAWzc.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWzc.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E9%99%A2%E8%B0%83%E6%9F%A5%E5%8F%91%E7%8E%B0%E5%8D%8E%E5%B0%94%E8%A1%97%E5%90%91%E9%BB%91%E5%90%8D%E5%8D%95%E5%86%85%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%85%AC%E5%8F%B8%E8%BE%93%E9%80%81%E4%BA%86%E6%95%B0%E5%8D%81%E4%BA%BF%E7%BE%8E%E5%85%83&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
