--- a/articles/rfi/999980.md
+++ b/articles/rfi/999980.md
@@ -1,5 +1,5 @@
-<!--1713541502000-->
-[伊朗中部发生爆炸 国际原子能机构称当地核设施&quot;未受损”](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8-%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD-%E6%9C%AA%E5%8F%97%E6%8D%9F)
+<!--1713543301000-->
+[伊朗中部传爆炸声  是以色列报复？看美联社如何分析](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240419-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0-%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D-%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90)
 ------
 
-<div>19/04/2024 - 11:23</div><img src="https://s.rfi.fr/media/display/a451c2ec-f849-11ee-b62a-005056a97e36/w:1280/p:16x9/2024-04-11T141133Z_1508015650_RC2D47A0VBVU_RTRMADP_3_UKRAINE-CRISIS-IAEA.JPG"><p><strong>总部设在奥地利维也纳的国际原子能机构（IAEA）宣布，周五在伊朗中部发生爆炸后，那里的核设施 "没有受到任何损害"。        </strong></p><div><p>国际原子能机构在社交网络X上"继续呼吁各方都保持高度克制，并重申任何核设施都不应成为军事冲突的目标"。</p><p>据报道，伊朗中部是几个已知核设施的所在地。据伊朗“塔斯尼姆”通讯社称，位于伊斯法罕地区的核设施"完全-安全"。</p><p>伊朗官方通讯社Irna也强调说："重要设施，尤其是核设施，完全安全，没有任何事故报告"。</p><p>周五凌晨伊朗中部发生了几起爆炸事件，美国高级官员暗示以色列发动了袭击，以报复上周末针对以色列的史无前例的无人机和导弹袭击。</p><p>然而，伊朗塔斯尼姆通讯社援引 "消息灵通人士 "的话说，"没有关于外国袭击的消息"。</p><p>最初对伊朗中部发生爆炸的反应仍然非常谨慎，各国政治领导人纷纷呼吁"不要升级"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWx4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E5%258F%2591%25E7%2594%259F%25E7%2588%2586%25E7%2582%25B8-%25E5%259B%25BD%25E9%2599%2585%25E5%258E%259F%25E5%25AD%2590%25E8%2583%25BD%25E6%259C%25BA%25E6%259E%2584%25E7%25A7%25B0%25E5%25BD%2593%25E5%259C%25B0%25E6%25A0%25B8%25E8%25AE%25BE%25E6%2596%25BD-%25E6%259C%25AA%25E5%258F%2597%25E6%258D%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAWx4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAWx4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWx4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%8F%91%E7%94%9F%E7%88%86%E7%82%B8%20%E5%9B%BD%E9%99%85%E5%8E%9F%E5%AD%90%E8%83%BD%E6%9C%BA%E6%9E%84%E7%A7%B0%E5%BD%93%E5%9C%B0%E6%A0%B8%E8%AE%BE%E6%96%BD%22%E6%9C%AA%E5%8F%97%E6%8D%9F%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 15:21</div><img src="https://s.rfi.fr/media/display/d33d9a5e-1266-11ea-b20a-005056a99247/w:1280/p:16x9/2018-07-16t122734z_63342907_rc14637277c0_rtrmadp_3_iran-haj-khamenei.jpg"><p><strong>周五（4月19号）清晨，伊朗在发现无人机后向伊斯法罕附近的一个主要空军基地和一个核设施发射了防空系统，这些无人机被怀疑是以色列袭击的一部分，以报复德黑兰对该国前所未有的无人机和导弹袭击。但没有伊朗官员直接承认以色列发动袭击的可能性，以色列军方也没有回应置评请求。据报周五是伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日。        </strong></p><div><p>美联社海湾和伊朗新闻主任乔恩-甘布雷尔（Jon Gambrell）报道称："伊朗在该国中部地区发射了防空系统，这似乎是以色列对几天前德黑兰发动的袭击的某种回应。现在，我们所知道的还很零散。截至今天上午，伊朗已经停止了航班飞行，防空系统也已经启动，人们听到了伊斯法罕附近的爆炸声。伊斯法罕附近有一个大型空军基地，伊朗在那里拥有1979年伊斯兰革命前购买的F-14 "雄猫 "战斗机。这里还有一个重要的核设施。伊朗并没有说这是一次袭击。他们对此轻描淡写。他们今天在国家电视台上试图拿这件事开玩笑。但在此之前，德黑兰发动了一次袭击，向以色列发射了数百架无人机和导弹，而在此之前，以色列在叙利亚发动了另一次袭击，杀害了伊朗准军事革命卫队的成员。"</p><p>对于伊朗的低调，乔恩-甘布雷尔引述分析人士称，这可能是伊朗试图避嫌，避免局势升级的一次尝试。伊朗对以色列的袭击是史无前例的，而今天的袭击似乎没有造成任何严重破坏。但这确实表明以色列有能力向伊朗发射无人机，而且今天还是伊朗最高领袖阿亚图拉-阿里-哈梅内伊的85岁生日。因此，分析人士称，这可能是对伊朗的一个警告，即以色列仍有能力在未来发动袭击。</p><p>« 纽约时报》援引匿名以色列官员的话称，这次袭击发生在伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日之际。</p><p>上周六晚间，伊朗发射了数百架无人机、弹道导弹和巡航导弹，发动了前所未有的袭击，使中东更接近一场地区性战争。以色列军方发言人表示，发射次数超过 300 次，但其中 99% 被拦截。</p><p>美联社今天报道称，伊朗总统当天访问伊朗城市达姆甘时称，最近针对以色列的导弹和无人机袭击是伊朗“自豪和力量的源泉”。莱西说：“这次行动成为伊斯兰共和国及其武装部队力量的标志。它也显示了我们国家钢铁般的决心。”</p><p>莱西声称这次袭击是必要的，并团结了该国的政治派别。</p><p>法新社包袋，有媒体援引美国高级官员的话称，以色列周五的袭击是为了报复上周末针对以色列的史无前例的无人机和导弹袭击。然而，伊朗塔斯尼姆通讯社援引 "消息灵通人士 "的话说，"没有关于外国袭击的消息"。</p><p>一些国家和国际组织仍然谨慎地作出反应，呼吁保持克制。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0l.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240419-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E4%25BC%25A0%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0-%25E6%2598%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E6%258A%25A5%25E5%25A4%258D-%25E7%259C%258B%25E7%25BE%258E%25E8%2581%2594%25E7%25A4%25BE%25E5%25A6%2582%25E4%25BD%2595%25E5%2588%2586%25E6%259E%2590&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0l.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
