--- a/articles/rfi/999987.md
+++ b/articles/rfi/999987.md
@@ -1,5 +1,5 @@
-<!--1713532502000-->
-[美国宇航局长揭露中国以民用计划之名掩盖军事太空计划 - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240419-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E9%95%BF%E6%8F%AD%E9%9C%B2%E4%B8%AD%E5%9B%BD%E4%BB%A5%E6%B0%91%E7%94%A8%E8%AE%A1%E5%88%92%E4%B9%8B%E5%90%8D%E6%8E%A9%E7%9B%96%E5%86%9B%E4%BA%8B%E5%A4%AA%E7%A9%BA%E8%AE%A1%E5%88%92)
+<!--1713532505000-->
+[尼日利亚成为世界上第一个抗脑膜炎新疫苗Men5CV疫苗的国家 - 健康时间](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E5%81%A5%E5%BA%B7%E6%97%B6%E9%97%B4/20240418-%E5%B0%BC%E6%97%A5%E5%88%A9%E4%BA%9A%E6%88%90%E4%B8%BA%E4%B8%96%E7%95%8C%E4%B8%8A%E7%AC%AC%E4%B8%80%E4%B8%AA%E6%8A%97%E8%84%91%E8%86%9C%E7%82%8E%E6%96%B0%E7%96%AB%E8%8B%97men5cv%E7%96%AB%E8%8B%97%E7%9A%84%E5%9B%BD%E5%AE%B6)
 ------
 
-<div>19/04/2024 - 14:34</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>法国总理阿塔尔任职100天，周四晚间做客24小时滚动新闻台BFMTV，详细阐述了任职后的作为，并承诺将对一些年轻人的“暴力”行为迅速做出反应；欧洲选举日益迫近，法国北部一些地区的民众却漠不关心；乌克兰向国际社会发出紧急救援的呼声；欧洲电动汽车销售遇挫，三月份下滑11%，中国竞争威胁迫在眉睫；这是19日出版的法国各报开篇新闻话题。                    </strong></p><div><p>关于中国，《费加罗报》揭示美国宇航局局长为中国的太空军事能力拉响警钟；《回声报》则报道了中国奇瑞汽车在西班牙建厂的消息。另外，印度迎来全球规模最大的选举，则是多份日报关注的亚洲新闻重点。</p><p><strong>尼尔森为中国的太空军事能力拉响警钟</strong></p><p>美国宇航局局长尼尔森星期三（4月17日）在众议院拨款委员会针对航天局2025年预算发言，对中国近年来在太空领域取得的巨大进步深表担忧。尼尔森指责中国继续增强其太空能力，并以民用计划的名义掩盖军事太空计划。美国宇航局局长强调：美中之间目前正在进行一场“竞赛”，美国必须先于中国成功登陆月球。因为他担心：一旦中国率先登陆，则可能宣称“月球为其领土”。尼尔森表示：中国在这方面投入了大量资金。美国“真的不应该放松警惕”。</p><p>美国计划于2026年通过阿尔忒弥斯3号任务将宇航员送上月球。</p><p>中国也计划在2030年之前将人类送往月球。美国民选官员在向美国航天局提出年度预算请求期间听取了尼尔森的表述。</p><p><strong>中国奇瑞在巴塞罗纳建厂</strong></p><p>另外，欧洲电动汽车市场出现低迷，随着各国收紧电动车补贴政策，3月份欧洲电动汽车销售下降11%。与此同时，中国奇瑞新能源星期二（4月16日）宣布：与西班牙埃布罗（Ebro-EV Motors）公司在巴塞罗纳成立一家合资企业，厂址选在2021年底关闭的前日产汽车旧址，计划将工厂改造为电动汽车中心。</p><p>《回声报》指出：中国奇瑞新能源加速进军欧洲，希望在欧洲发展销售业务，成为第一家在欧洲设厂的中国电动汽车企业。</p><p>这家由西班牙埃布罗占多数股权的合资企业承诺，在现有基础设施再利用的基础上，将于今年第四季度末开始生产。</p><p>报道指出：通过在欧洲建厂，奇瑞公司面临巨大挑战。这家原本注重低端市场的制造商，打算推出新的品牌重塑形象。同时为了更快地在激烈的竞争中找到一席之地，奇瑞准备以极具吸引力的价格打响市场争夺战。</p><p><strong>印度：最大规模的选举</strong></p><p>此外，多份日报聚焦今天开始的印度议会下院选举。报道指出：全球最大规模的选举-印度议会下院选举19日正式拉开帷幕。公众舆论和观察家一致认为：即将卸任的总理穆迪领导的印度人民党将赢得多数席位。根据3月6日公布的民意调查，75%的选民对穆迪表示支持。随着第二个五年任期的结束，穆迪的民意支持率一年内跃升了8个百分点。</p><p>不过，印度总理治理工作中也存在诸多不足。比如：在新冠病毒大流行期间显露出管理不善，导致印度成为全球受该病毒影响最严重的国家，死亡人数超过400万。还有，在中印两国军队在喜马拉雅山西部的冲突中表现不力，未能有效地阻止中国军队占领大片富有争议的边境地带。</p><p>从经济层面看，尽管印度年增长率约为7%，但失业和就业不足仍是印度面临的最大挑战。国际劳工组织在3月份公布的一份报告中强调，2012至2022十年间，印度经济每年仅能为进入就业市场的1200万年轻人创立500万个就业机会。这场社会危机每年迫使超过10万民众非法移民。</p><p>印度总理穆迪执政十年还广得民心，是他以人民的无私公仆的形象维持的声望。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div>
+<div>18/04/2024 - 23:26</div><img src="https://s.rfi.fr/media/display/63f9ea44-7000-11ed-a917-005056bfb2b6/w:1280/p:16x9/pexels-chokniti-khongchum-2280568-1.jpg"><p><strong>尼日利亚成为世界上第一个推出世界卫生组织推荐的新疫苗Men5CV疫苗的国家，可以防止人们感染五种脑膜炎球菌菌株。根据世界卫生组织消息，全球疫苗免疫联盟为这次疫苗和紧急疫苗接种活动以及全球脑膜炎疫苗储备提供了资金，并通过开展常规脑膜炎疫苗接种活动为低收入国家提供支持。                    </strong></p><div><p>尼日利亚位于非洲脑膜炎带，是非洲26个脑膜炎高度流行国家之一。去年，非洲各地报告的脑膜炎病例增加了50%。</p><p>世界卫生组织表示，尼日利亚在2023年10月1日至2024年3月11日期间暴发了血清型C脑膜炎奈瑟菌疫情，导致1742例疑似脑膜炎病例，包括在尼日利亚36个州中的7个州（阿达马瓦、包奇、贡贝、吉加瓦、卡齐纳、约贝、赞法拉州）出现101例确诊病例和153例死亡。</p><p>为了平息这场致命的疫情，尼日利亚在2024年3月25日至28日期间开展了一次免疫接种运动，最初为100多万1-29岁人群接种疫苗。</p><p>这种革命性的新疫苗在一次注射中提供对抗五种主要脑膜炎球菌菌株（A、C、W、Y和X）的强大屏障。这五种菌株都会引起脑膜炎和血液中毒。这比目前在非洲大部分地区使用的疫苗提供了更广泛的保护，目前使用的疫苗仅对A菌株有效。</p><p>这种新疫苗有可能大幅减少脑膜炎病例，并推动在战胜脑膜炎方面取得进展。这对于像尼日利亚这样流行多种血清型脑膜炎的国家尤其重要。这种新疫苗采用了与在尼日利亚消灭了A型脑膜炎球菌疫情的A型脑膜炎结合疫苗（MenAfriVac®）相同的技术。</p><p>这种新的多价结合疫苗的研发历时13年，是在帕斯适宜卫生科技组织与印度血清研究所开展合作的基础上研制出来的。英国政府外交、联邦和发展事务部提供的资金对其研发成功至关重要。</p><p>2023年7月，世卫组织对新的Men5CV疫苗（品牌名称为MenFive®）进行了预认证，并于2023年10月向各国发布了推出这种新疫苗的正式建议。2023年12月，全球疫苗免疫联盟为推出Men5CV疫苗分配了资源，目前可通过国际疫苗供应协调小组管理的应急储备为疫情应对提供疫苗，而通过大规模预防运动推出的疫苗接种活动预计将在2025年在脑膜炎地带国家开始。</p><p>世界卫生组织说，继尼日利亚发起脑膜炎疫苗接种运动之后，2024年4月在巴黎举行的脑膜炎问题国际峰会是在战胜脑膜炎道路上的又一个重要里程碑，各国领导人将在峰会上确定当前面临的挑战，评估下一步应采取的措施。这也为国家领导人和主要合作伙伴在政治和财政上作出承诺以便作为一个公共卫生问题加快实现到2030年消除脑膜炎的目标提供了一个机会。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%AE%89%E4%B8%9C%E5%B0%BC/" title="安东尼">安东尼</a></div></div></div></div>
