--- a/articles/rfi/999995.md
+++ b/articles/rfi/999995.md
@@ -1,5 +1,5 @@
-<!--1713476702000-->
-[乌克兰称成功袭击克里米亚俄机场 俄军空袭乌北部城市](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA-%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82)
+<!--1713476703000-->
+[英国称要限制对中国投资](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84)
 ------
 
-<div>18/04/2024 - 22:36</div><img src="https://s.rfi.fr/media/display/c27b141e-fccf-11ee-a8c2-005056bf30b7/w:1280/p:16x9/2024-04-17T144304Z_1281641736_RC2987ATK3R3_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>乌克兰18日说，其部队已袭击被吞并的克里米亚半岛上一座大型俄罗斯机场，摧毁大批军事装备。        </strong></p><div><p>据法新社报导，这次袭击发生在17日凌晨，地点在赞科伊（Dzhankoi）附近的一座空军基地，这座空军基地位于莫斯科于2014年占领的克里米亚半岛北部。</p><p>乌克兰军事情报部门说，这次行动很成功，破坏雷达和防空系统和其他目标。 情报部门说：正在查明被摧毁或损坏的敌方航空器数量，以及俄罗斯占领军伤亡人数。</p><p>乌克兰社交媒体前一天曾经流传了据称显示机场爆炸和警报声的视频，但基辅并没有立即发表评论。 乌克兰总统泽连斯基随后在晚间演说中证实他的部队发动了这次袭击，并感谢军方“正确的打击占领者。</p><p><strong>俄军17日空袭乌北部城市 死亡增至 18人 另有78人受伤</strong></p><p>另据中央社18日的综合报导：俄罗斯军队17日空袭了乌克兰北部城市切尔尼戈夫（Chernihiv），期间有3枚导弹击中市中心，乌方官员18日表示，这波攻击造成的死亡人数已升至18人，还有78人受伤。</p><p>路透社报导还说，17日俄军袭击破坏了切尔尼戈夫市的民用基础设施，这是俄罗斯近几周来发动的最致命空袭，乌克兰高层官员也呼吁各国提供更多防空支援。 乌克兰切尔尼戈夫州州长曹斯（Vyacheslav Chaus）在通讯软体Telegram发文写道，搜救行动已经在今天早上结束。</p><p>俄罗斯全面侵略乌克兰的战争已进入第3年，俄国当局否认在这场战争中锁定平民发动攻击。 但切尔尼戈夫代理市长洛马柯（Oleksandr Lomako）17日向当地电视台表示：不幸的是，俄罗斯持续向平民和民用基础设施发动恐怖攻击，针对切尔尼戈夫的袭击再次证实了这 一点。</p><p><strong>布林肯4月23日前往中国访问4天</strong></p><p>此外，美国政治新闻网Politico报导，据1位驻华盛顿外交官和3位了解布林肯行程计画的美国官员透露，布林肯将 在4月23日启程前往中国，进行为期4天的访问。 所有人都被要求匿名，因为他们无权公开谈论这次旅行。 这是布林肯自去年6月以来第二次访问中国。</p><p>美国之音18日报导，美国国务院发言人米勒（Matthew Miller）近日表示，布林肯在访中期间预计将提出美国对于北京正在帮助俄罗斯建立国防工业基础，以延续乌克兰战争的关切。 自俄罗斯在2022年2月全面入侵乌克兰以来，美国就警告中国不要帮助莫斯科的战争行动。</p><p>据华尔街日报近日报导，美国官员称，中国在俄乌战争关键阶段帮助俄国恢复军工生产，为莫斯科提供光学、微电子、无人机发动机和其他军民两用材料，让俄国得以显著增强战场能力。 美方官员私下指出，俄国重振军工产能的速度快于他们预期，可能就是得利于这种外援。 随后中国驻美国大使馆发言人刘鹏宇否认，指中国不是乌克兰危机的制造者或当事方；中方一直在支持政治解决方面发挥建设性作用。 刘鹏宇强调，中国没有向（冲突）任何一方提供武器，中国和俄罗斯之间的正常贸易不应受到干涉和限制。 他说，中国不站在任何一边，并要求美方不要干扰北京和莫斯科之间的正常关系。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%25A7%25B0%25E6%2588%2590%25E5%258A%259F%25E8%25A2%25AD%25E5%2587%25BB%25E5%2585%258B%25E9%2587%258C%25E7%25B1%25B3%25E4%25BA%259A%25E4%25BF%2584%25E6%259C%25BA%25E5%259C%25BA-%25E4%25BF%2584%25E5%2586%259B%25E7%25A9%25BA%25E8%25A2%25AD%25E4%25B9%258C%25E5%258C%2597%25E9%2583%25A8%25E5%259F%258E%25E5%25B8%2582&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%20-%20https%3A%2F%2Frfi.my%2FAWt1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%20-%20https%3A%2F%2Frfi.my%2FAWt1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 14:07</div><img src="https://s.rfi.fr/media/display/65e6582a-fac9-11ed-a60a-005056a90321/w:1280/p:16x9/000_33EF3VR.jpg"><p><strong>英国首相苏纳克(Rishi Sunak)政府将推出一揽子措施，加大对中国贸易和投资的限制。苏纳克的最高副手警告称，英国的开放经济面临前所未有的威胁。        </strong></p><div><p>据POLITICO今天报道称，英国暗示可能在“降低风险”的推动下限制中国投资。这些措施在一定程度上兑现了苏纳克向美国总统拜登做出的承诺。</p><p>英国副首相奥利弗·道登应于周四今天在伦敦举行的一次具有里程碑意义的演讲中宣布该计划，他在演讲中表示，在冷战以来地缘政治紧张程度最高的情况下，英国必须“清醒地”认识到英国经济面临的威胁。道登将表示，英国面临“我们的自由、繁荣和安全之间的谨慎平衡”。</p><p>但他说，虽然“我们不会与全球经济脱钩”，但英国“必须通过收紧出口管制和海外投资来降低风险”，这些投资可能为中国等战略竞争对手的技术提供资金。</p><p>道登在演讲前对《Politico》杂志表示，英国“需要留意”对外投资，“这些投资正在被用来促进、支持和帮助对手的战略提升”。</p><p>但他也说，在境外投资方面，“对我来说，施加任何形式的限制都有很高的门槛。”虽然英国历史上的开放性一直是一个优势，但“我们必须清醒地认识到，我们体系的一大优势也带来了漏洞。”</p><p>英国采取上述举措之前，拜登于去年八月签署了一项行政命令，限制半导体、人工智能和量子等战略领域的对外投资。</p><p>一项调查显示，苏纳克六月访问白宫，期间他“承诺”英国建立对外投资审查制度，能够“评估投资带来的潜在国家安全风险”由 POLITICO 发布，并在商业和贸易部访问后不久分发给企业。</p><p>道登目前正在指示该部门改善对中国等战略竞争对手的新兴技术的出口管制，并组建一个新团队来分析英国政府从对外投资风险调查中获得的数据。</p><p>道登表示，这是他一直与英国盟友一起“努力解决”的问题。他说，英国拥有价值约 13 万亿英镑的外部投资股票。 “这为英国创造了价值数千亿英镑的收入，因此这对我们来说非常有价值。”</p><p>道登表示，政府希望利用《国家安全与投资法案》来筛选对英国的外国直接投资，而不是建立一个新制度，以遏制资金流向中国等战略竞争对手的敏感技术。</p><p>它将就投资何时可能提示风险发布进一步指导，并就添加涵盖关键矿物和半导体的新类别进行磋商。</p><p>与此同时，道登将宣布将对流入英国的交易的强制性报告要求进行修改，并提供“少量有针对性的豁免”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWnm.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E8%258B%25B1%25E5%259B%25BD%25E7%25A7%25B0%25E8%25A6%2581%25E9%2599%2590%25E5%2588%25B6%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E6%258A%2595%25E8%25B5%2584&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84%20-%20https%3A%2F%2Frfi.my%2FAWnm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84%20-%20https%3A%2F%2Frfi.my%2FAWnm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWnm.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
