--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-21 [布林肯将于4月24日访华 讨论中东、乌克兰和南海议题](/articles/rfa/1037269.md)
+
 4-20 [中国海军成立75周年 美菲将举行规模最大军演](/articles/rfa/1037270.md)
 
 4-20 [解放军撤销第五军种  新建信息支援部队搞心战？](/articles/rfa/1037271.md)
@@ -598,6 +600,4 @@
 3-19 [证监会：恒大集团创办人许家印终身禁入证券市场](/articles/rfa/1037567.md)
 
 3-19 [中国未成年人恶性犯罪案件频发　谁该负责？](/articles/rfa/1037568.md)
-
-3-19 [中国著名骨科医生涉腐被查　难以遏制的医疗腐败](/articles/rfa/1037569.md)
 
