--- a/articles/rfi/999968.md
+++ b/articles/rfi/999968.md
@@ -1,5 +1,5 @@
-<!--1713554102000-->
-[岸田文雄：日美关系不会因11月美国总统选举的结果而动摇](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84-%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87)
+<!--1713586502000-->
+[马克龙会晤黎巴嫩总理称：将努力防止黎以之间暴力升级](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0-%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7)
 ------
 
-<div>19/04/2024 - 19:38</div><img src="https://s.rfi.fr/media/display/8131e55c-fbf6-11ee-a644-005056a90284/w:1280/p:16x9/2024-04-10T143514Z_1347866304_RC2Q37ADHC0H_RTRMADP_3_USA-JAPAN.JPG"><p><strong>日本首相岸田文雄在19日的日本参院全体会议上发表观点，认为日美关系不会因11月美国总统选举的结果而动摇。他被问及共和党籍前总统特朗普再次当选时如何应对，表示“正在密切关注。对于日美同盟的重要性，不论是民主党还是共和党都存在共识，选举结果不会对日美关系产生影响。”        </strong></p><div><p>共同社报道，关于和美国总统拜登的联合声明中写明完善日企可参与美军舰船等大规模维修的机制，岸田解释称“这有益于提高美军的快速反应力，加强威慑体制，这并非基于和特定国家作战的考量”，寻求理解。</p><p>日本首相岸田文雄4月11日曾在美国国会参众两院联席会议上发表的演讲中主张，中国的对外态度和军事动向“给国际社会整体的和平与稳定带来了迄今为止最大的战略挑战”。他还说，朝鲜向俄罗斯出口弹道导弹，“增加了乌克兰的苦难”。</p><p>岸田表示，日本“作为最亲近的朋友，与美国同在”。他还提及把防卫费提高至占国内生产总值（GDP）2%、拥有反击能力（对敌基地攻击能力）等岸田政府的政策，强调“为巩固日美同盟而带头采取了一系列举措”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX40.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E5%25B2%25B8%25E7%2594%25B0%25E6%2596%2587%25E9%259B%2584-%25E6%2597%25A5%25E7%25BE%258E%25E5%2585%25B3%25E7%25B3%25BB%25E4%25B8%258D%25E4%25BC%259A%25E5%259B%25A011%25E6%259C%2588%25E7%25BE%258E%25E5%259B%25BD%25E6%2580%25BB%25E7%25BB%259F%25E9%2580%2589%25E4%25B8%25BE%25E7%259A%2584%25E7%25BB%2593%25E6%259E%259C%25E8%2580%258C%25E5%258A%25A8%25E6%2591%2587&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%EF%BC%9A%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87%20-%20https%3A%2F%2Frfi.my%2FAX40.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%EF%BC%9A%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87%20-%20https%3A%2F%2Frfi.my%2FAX40.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX40.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%EF%BC%9A%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 23:30</div><img src="https://s.rfi.fr/media/display/fc2f3c92-fe93-11ee-8d7c-005056bf30b7/w:1280/p:16x9/2024-04-19T110206Z_1497783755_RC2M97A95C26_RTRMADP_3_FRANCE-LEBANON.JPG"><p><strong>法国总统马克龙周五(4月19日）在巴黎会见黎巴嫩总理米卡提，马克龙表示：“法国将尽一切努力防止黎巴嫩和以色列之间暴力局势升级”。        </strong></p><div><p>法新社报道，法国总统府爱丽舍宫周五在一份新闻稿中称，马克龙周五在巴黎会晤黎巴嫩总理米卡提及黎巴嫩陆军总司令奥恩，马克龙并表示，法国将继续向黎巴嫩武装部队提供支持。</p><p>据爱丽舍宫新闻稿称，马克龙将继续为黎巴嫩的稳定采取行动，使其免受中东紧张局势升级带来的风险”。 马克龙并重申了法国在联合国驻黎巴嫩临时部队（联黎部队）中的承诺，并强调了各国应履行的职责。</p><p>根据周三和周四在布鲁塞尔举行的欧洲理事会特别会议做出的决定，法国将与所有准备好更多参与的国家，特别是其欧洲伙伴一起共同努力”。</p><p>马克龙并与黎巴嫩议会议长纳比·贝里通了电话，马克龙再次呼吁“政治领导人致力于寻求摆脱正在削弱黎巴嫩制度危机的出路”。</p><p>自米歇尔·奥恩（Michel Aoun）总统于 2022 年 10 月 31 日任期结束后，黎巴嫩议会一直难以就其继任者达成一致，势力强大、获伊朗支持的"真主党"（Hezbollah）与对手之间的分歧导致议会陷入分裂。</p><p>马克龙预计很快将与其他黎巴嫩政治人物展开会谈，马克龙已要求他的个人特使、前外交部长勒德里昂继续为此进行努力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5H.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E4%25BC%259A%25E6%2599%25A4%25E9%25BB%258E%25E5%25B7%25B4%25E5%25AB%25A9%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0-%25E5%25B0%2586%25E5%258A%25AA%25E5%258A%259B%25E9%2598%25B2%25E6%25AD%25A2%25E9%25BB%258E%25E4%25BB%25A5%25E4%25B9%258B%25E9%2597%25B4%25E6%259A%25B4%25E5%258A%259B%25E5%258D%2587%25E7%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0%EF%BC%9A%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAX5H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0%EF%BC%9A%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAX5H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5H.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0%EF%BC%9A%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
