--- a/articles/rfi/999981.md
+++ b/articles/rfi/999981.md
@@ -1,5 +1,5 @@
-<!--1713545102000-->
-[在美国，“中国钢铁危害成了竞选的一个招式” - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240418-%E5%9C%A8%E7%BE%8E%E5%9B%BD%EF%BC%8C-%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%B1%E5%AE%B3%E5%B7%B2%E6%88%90%E4%B8%BA%E7%AB%9E%E9%80%89%E7%9A%84%E4%B8%80%E4%B8%AA%E6%8B%9B%E5%BC%8F)
+<!--1713552301000-->
+[G7承诺“加强乌克兰的防空力量”](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-g7%E6%89%BF%E8%AF%BA-%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F)
 ------
 
-<div>19/04/2024 - 00:47</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。                    </strong></p><div><p>周四法国世界报发表的一篇文章表示，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。</p><p>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。顺便，拜登也对被唐纳德·特朗普的演讲给打动了的工人阶级发起了新的魅力攻势。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。</p><p>相关的文章写道，在20世纪70年代之前，宾夕法尼亚州的匹兹堡，是让美国国家工业变得伟大的一个地方，随后，却遭受了去工业化的蹂躏，可以说是美国“铁锈带”的核心。4月17日星期三，美国总统选择了匹兹堡这个“铁锈带”的核心地点，对中国钢铁倾销发起了攻击，同时，也对受到特朗普在美国总统选举的摇摆州所发表的演讲所迷惑的工人阶级，发起了新的魅力攻势。乔·拜登当天在钢铁工人工会的总部宣布，他希望对从中国进口的钢铁和铝所征收的税率是如今的三倍，目前的税率是7.5%。中国的钢铁产量占世界的近一半，存在巨大的产能过剩，中国钢铁基本产品的价格只有美国钢铁制造商的一半，以钢铁为基础的中国工业制品如汽车、风力涡轮机等充斥着市场。白宫坚称，这一切还对碳排放的减少，非常不利。</p><p>美国总统拜登在X社交网络上宣称：“我希望与中国竞争，而不是冲突。”拜登还向钢铁工人工会重申了他希望工会能够参与到捍卫“美国制造”的行动中去。同时，拜登还反对将美国钢铁公司出售给日本的新日铁公司，拜登表示，“一个多世纪以来”，美国钢铁公司都是一个“标志性公司”，它“必须继续是一个美国公司”。拜登还表示，像特朗普一样，他已经做好了准备，制止美国联邦外国投资委员会目前正在审查的这项售卖行动。</p><p><strong>持续性的、全方位施压</strong></p><p>法国世界报的文章表示，自2016年以来，中国钢铁的危害已成为了美国竞选活动中的一个招式。在拜登的作为总统候选人所发表的有关日本和中国的演讲中，不乏机会主义，甚至是厚颜无耻。诚然，新日铁是日本公司，但日本是美国坚定不移的盟友。至于中国的钢铁威胁，如果我们相信美国人口普查局的数据的话，那么，是不存在中国钢铁威胁的：因为，根据美国人口普查局的数据，美国进口的中国钢铁很少，只占其采购量的3%；美国钢铁协会的数据甚至显示，中国钢铁在美国钢铁采购中只占2.1%！</p><p>但是，华盛顿决定对中国施加永久性的、全方位的压力。与“芯片之战”相比，“钢铁之战”根本不算什么。华盛顿以国家安全的为名，正在尽一切努力、包括对其盟友施加压力，以便让北京没有可能来获得最新一代的电子芯片。</p><p>拜登指责习近平把先进的芯片用于“错误的地方”。习近平则认为，用的地方很对：是为了让中国在2050年成为世界领先的经济、科技和军事强国。</p><p>中国梦是美国的噩梦。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 19:04</div><img src="https://s.rfi.fr/media/display/00846dda-fe3f-11ee-958f-005056a97e36/w:1280/p:16x9/G7%20ITALY%20APRIL%20A.jpg"><p><strong>七国集团（G7）外长周五表示，在俄罗斯袭击摧毁电力基础设施并造成数百人死亡之后，七国集团决心加强乌克兰的防空能力。        </strong></p><div><p>G7外长们表示，七国集团 "将加强乌克兰的防空能力，以拯救生命和保护重要基础设施"，并补充说他们将增加对基辅的防务和安全援助。</p><p>周五在意大利南部卡普里岛举行的为期三天的部长会议结束时发表了七国集团声明，会议期间讨论的主要问题包括乌克兰问题以及以色列和伊朗之间的军事对抗。据路透社报道，G7外长们补充说，"我们决心继续向乌克兰及其人民提供军事、财政、政治、人道主义、经济和发展支持"。</p><p>G7外长会议结束时，美国国务卿安东尼-布林肯表示，乌克兰急需额外资源，并警告北京，如果中国支持俄罗斯国防工业，将危及中国与欧洲的关系。</p><p>近几个月来，对乌克兰的军事援助已经放缓，欧洲合作伙伴明显缺乏武器弹药，而美国的重要资金在国会被共和党人卡住。</p><p>另一个关键问题是如何利用俄罗斯在西方持有的约3,000 亿美元主权资产的衍生利益来帮助乌克兰，而此时欧盟成员国正对此举的合法性举棋不定。</p><p>七国集团（G7）外长表示，他们将继续探讨如何利用被冻结的俄罗斯资产来帮助乌克兰。</p><p>北约秘书长延斯-斯托尔滕贝格（Jens Stoltenberg）周四在意大利卡普里小岛举行的七国集团外长会议间隙强调，乌克兰"迫切需要增加防空能力"。他向G7外长们说，由于俄罗斯对乌克兰城镇和基础设施的空袭，当地局势"困难重重"，因此"北约成员国保持并加强其支持至关重要"。</p><p>这位北约秘书长表示，他最近注意到北约成员国宣布提供军事援助的"令人鼓舞"的迹象，包括美国众议院预计周六投票通过向基辅提供 610 亿欧元援助的一揽子计划。</p><p>斯托尔滕贝格先生在乌克兰外交事务负责人库列巴（Dmytro Kouleba）应邀参加的乌克兰问题会议前补充道说："我们本应更早地给予他们更多"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3Y.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-g7%25E6%2589%25BF%25E8%25AF%25BA-%25E5%258A%25A0%25E5%25BC%25BA%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%259A%2584%25E9%2598%25B2%25E7%25A9%25BA%25E5%258A%259B%25E9%2587%258F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAX3Y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAX3Y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3Y.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
