--- a/articles/rfi/999998.md
+++ b/articles/rfi/999998.md
@@ -1,5 +1,5 @@
-<!--1713476703000-->
-[英国称要限制对中国投资](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84)
+<!--1713494701000-->
+[伊朗袭击以色列后 中俄联合支持德黑兰对抗华盛顿](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240418-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF)
 ------
 
-<div>18/04/2024 - 14:07</div><img src="https://s.rfi.fr/media/display/65e6582a-fac9-11ed-a60a-005056a90321/w:1280/p:16x9/000_33EF3VR.jpg"><p><strong>英国首相苏纳克(Rishi Sunak)政府将推出一揽子措施，加大对中国贸易和投资的限制。苏纳克的最高副手警告称，英国的开放经济面临前所未有的威胁。        </strong></p><div><p>据POLITICO今天报道称，英国暗示可能在“降低风险”的推动下限制中国投资。这些措施在一定程度上兑现了苏纳克向美国总统拜登做出的承诺。</p><p>英国副首相奥利弗·道登应于周四今天在伦敦举行的一次具有里程碑意义的演讲中宣布该计划，他在演讲中表示，在冷战以来地缘政治紧张程度最高的情况下，英国必须“清醒地”认识到英国经济面临的威胁。道登将表示，英国面临“我们的自由、繁荣和安全之间的谨慎平衡”。</p><p>但他说，虽然“我们不会与全球经济脱钩”，但英国“必须通过收紧出口管制和海外投资来降低风险”，这些投资可能为中国等战略竞争对手的技术提供资金。</p><p>道登在演讲前对《Politico》杂志表示，英国“需要留意”对外投资，“这些投资正在被用来促进、支持和帮助对手的战略提升”。</p><p>但他也说，在境外投资方面，“对我来说，施加任何形式的限制都有很高的门槛。”虽然英国历史上的开放性一直是一个优势，但“我们必须清醒地认识到，我们体系的一大优势也带来了漏洞。”</p><p>英国采取上述举措之前，拜登于去年八月签署了一项行政命令，限制半导体、人工智能和量子等战略领域的对外投资。</p><p>一项调查显示，苏纳克六月访问白宫，期间他“承诺”英国建立对外投资审查制度，能够“评估投资带来的潜在国家安全风险”由 POLITICO 发布，并在商业和贸易部访问后不久分发给企业。</p><p>道登目前正在指示该部门改善对中国等战略竞争对手的新兴技术的出口管制，并组建一个新团队来分析英国政府从对外投资风险调查中获得的数据。</p><p>道登表示，这是他一直与英国盟友一起“努力解决”的问题。他说，英国拥有价值约 13 万亿英镑的外部投资股票。 “这为英国创造了价值数千亿英镑的收入，因此这对我们来说非常有价值。”</p><p>道登表示，政府希望利用《国家安全与投资法案》来筛选对英国的外国直接投资，而不是建立一个新制度，以遏制资金流向中国等战略竞争对手的敏感技术。</p><p>它将就投资何时可能提示风险发布进一步指导，并就添加涵盖关键矿物和半导体的新类别进行磋商。</p><p>与此同时，道登将宣布将对流入英国的交易的强制性报告要求进行修改，并提供“少量有针对性的豁免”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWnm.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E8%258B%25B1%25E5%259B%25BD%25E7%25A7%25B0%25E8%25A6%2581%25E9%2599%2590%25E5%2588%25B6%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E6%258A%2595%25E8%25B5%2584&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84%20-%20https%3A%2F%2Frfi.my%2FAWnm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84%20-%20https%3A%2F%2Frfi.my%2FAWnm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWnm.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 20:12</div><img src="https://s.rfi.fr/media/display/07af6fa4-fc93-11ee-8851-005056a97e36/w:1280/p:16x9/e1d8ce33b89d57ff07354d9cb2a904726a60f587.jpg"><p><strong>莫斯科和北京并未谴责伊朗对以色列领土的袭击，但他们将这场危机视为挑拨西方与世界其他国家之间关系的机会。这是世界报的两名莫斯科特派记者勒梅特及维特金共同撰写报道指出的。         </strong></p><div><p>在伊朗与以色列之间的危机中，在大多数国家一致呼吁克制的背后，俄罗斯和中国外交立场却是坚决站在伊朗一边。 </p><p style="text-align:left">莫斯科和北京都没有谴责德黑兰在4月13日星期六晚上至4月14日星期日发动的大规模空袭。 相反，中国外交部长王毅周一与伊朗外长侯赛因·阿米尔·阿卜杜拉希安通电话提醒说，“中方强烈谴责并坚决反对针对伊朗驻大马士革使馆领事部的袭击事件”(发生在4月1日)，这是根据中国官方媒体新华社发布的这项谈话报道。 </p><p style="text-align:left">另一方面，北京“注意到伊朗的声明，即所采取的行动是有限的，并构成自卫行为”。 弗拉基米尔·普京周二(16日也指出，在与伊朗外长易卜拉欣·拉伊西的通话中，伊朗展现了希望“避免局势进一步升级”的意愿。 </p><p style="text-align:left">俄罗斯常驻联合国代表瓦西里·内本齐亚(Vassilyi Nebenzia)前一天已经提到伊朗的“合法回应”，并倾向于强调西方在此事上的“虚伪”。俄罗斯外交发言人玛丽亚·扎哈罗娃对以色列驻莫斯科大使西蒙娜·加尔佩林说：“西蒙娜，请您提醒我何时以色列谴责了基辅政权对俄罗斯领土的袭击。” </p><p style="text-align:left">俄罗斯的宣传渠道甚至对伊朗的袭击表现出某种形式的兴奋，首先描述了德黑兰的“胜利”和以色列的“恐慌”，然后采用了系列词句：“有限打击”具有简单的“警告”意义。 NTV 频道周一表示：“伊朗已成为穆斯林世界的重心，” </p><p style="text-align:left">伊朗是莫斯科的重要盟友： 在所采取的这些态度立场上 </p><p style="text-align:left">不仅仅是对于重要合作伙伴展现出很好的举止。 伊朗是莫斯科在对乌克兰战争中的重要盟友，并向俄罗斯提供无人机和导弹。  </p><p style="text-align:left">伊朗也是北京的主要石油供应国之一，北京一直反对对德黑兰实施制裁。 3月中旬，中国、俄罗斯、伊朗三国仍在阿拉伯海进行联合军事演习。 </p><p style="text-align:left">俄罗斯和中国的立场首先与 2023 年 10 月 7 日哈马斯袭击以色列后所做出的转变一致，中俄两国拖到很晚才谴责以色列，而且往往措辞含糊。  </p><p style="text-align:left">自此，北京在中东事务上极力采取与美国和七国集团截然相反的立场，自诩为“南方国家”的代言人。 </p><p style="text-align:left">正是以与西方面对面的名义，莫斯科牺牲了与以色列的良好关系以及迄今为止以平衡为考量的地区政策。  </p><p style="text-align:left">乌克兰战争是俄罗斯的绝对优先要务，中东的紧张局势是透过这个棱镜来分析的。  </p><p style="text-align:left">这种紧张情势是在西方与世界其他国家之间制造隔阂的一种手段，希望看到西方的注意力和资源分散，从而损害基辅。 对此，媒体援引俄罗斯分析师的话说，紧张局势的升级可能导致能源价格上涨，这对俄罗斯经济有利。 </p><p style="text-align:left">然而，失控的大火对于莫斯科和北京都没有任何好处。该地区不仅对中国的能源供应至关重要，而且没有任何迹象表明伊朗政权将会抵御过于残酷的震荡和冲击。反过来看，这个问题也适用于莫斯科在该地区的主要支持的对象--大马士革。 军事升级还可能削弱德黑兰向莫斯科供应武器的能力。 </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWsJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240418-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E4%25B8%25AD%25E4%25BF%2584%25E8%2581%2594%25E5%2590%2588%25E6%2594%25AF%25E6%258C%2581%25E5%25BE%25B7%25E9%25BB%2591%25E5%2585%25B0%25E5%25AF%25B9%25E6%258A%2597%25E5%258D%258E%25E7%259B%259B%25E9%25A1%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF%20-%20https%3A%2F%2Frfi.my%2FAWsJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF%20-%20https%3A%2F%2Frfi.my%2FAWsJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWsJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
