--- a/articles/rfi/999967.md
+++ b/articles/rfi/999967.md
@@ -1,5 +1,5 @@
-<!--1713591902000-->
-[欧盟看到中国向俄罗斯供应军民两用产品的迹象](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1)
+<!--1713595501000-->
+[涉巴基斯坦弹道导弹计划 美国制裁4实体包括3家中企](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92-%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81)
 ------
 
-<div>19/04/2024 - 18:13</div><img src="https://s.rfi.fr/media/display/ea51fe98-baae-11ee-8e54-005056a97e36/w:1280/p:16x9/%D0%92%D1%96%D1%86%D0%B5%D0%BF%D1%80%D0%B5%D0%B7%D0%B8%D0%B4%D0%B5%D0%BD%D1%82%20%D0%84%D0%B2%D1%80%D0%BE%D0%BA%D0%BE%D0%BC%D1%96%D1%81%D1%96%D1%97%20%D0%92%D0%B0%D0%BB%D0%B4%D1%96%D1%81%20%D0%94%D0%BE%D0%BC%D0%B1%D1%80%D0%BE%D0%B2%D1%81%D0%BA%D1%96%D1%81.%20%D0%91%D1%80%D1%8E%D1%81%D1%81%D0%B5%D0%BB%D1%8C%2C%2023%20%D1%81%D1%96%D1%87%D0%BD%D1%8F%2C%202024%20%C2%A9%20%20European%20Union.jpg"><p><strong>欧盟委员会副主席周四表示，欧盟看到有迹象表明中国正在向俄罗斯供应可用于制造武器的零部件，并担心如果西方的决心减弱，中国可能会有恃无恐地增加对俄罗斯的供应。        </strong></p><div><p>据路透4月18日华盛顿报道，欧盟委员会执行副主席东布罗夫斯基斯（Valdis Dombrovskis）表示，他与美国国会立法者会面时强调美国批准被拖延已久的援助乌克兰（法案）的重要性。</p><p>美国官员上周向记者们简要介绍了中国向俄罗斯提供的物资--包括无人机和导弹技术、卫星图像和机床，指出这些物资虽不足以达到提供致命武器援助的程度，但却有助于俄罗斯增强军力，支撑其长达两年的乌克兰战争。</p><p>欧盟委员会副主席东布罗夫斯基斯在美国国会外交关系委员会的一次活动上说，欧盟正与美国合作打击逃避对俄罗斯制裁的行为，但他没有透露细节。</p><p>他说，欧盟对中国在乌克兰问题上的行动表示担忧，尤其是最近有迹象表明中国正在向俄罗斯运送零部件。</p><p>他解释道，我们看到中国正在坐观成败，考虑如何利用这种情况为自己谋利。但不幸的是，最近我们也看到有迹象表明中国确实在向俄罗斯供应零部件和各种设备。”</p><p>他称，这些设备涉及军民两用物品，而非真正的武器，但这些行动表明，加强西方支持乌克兰的决心是多么重要。</p><p>中国大使馆发言人表示，中国不是乌克兰危机的一方，中俄之间的正常贸易不应受到干扰或限制。</p><p>美国国务卿安东尼-布林肯周五在G7外长会议上指责中国间接"助长"了在乌克兰的冲突。布林肯说：“中国如果一方面希望与欧洲和其他国家保持友好关系，就不能另一方面助长冷战结束以来对欧洲安全的最大威胁”。</p><p>在意大利卡普里岛举行的G7外长会议周五发布的公报称，他们对中国向俄罗斯转让材料帮助其在乌克兰的战争机器表示"强烈关切"。</p><p>美国国务院发言人本周表示，美国国务卿安东尼-布林肯预计在即将对中国进行的访问中提出类似的关切。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX2t.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E6%25AC%25A7%25E7%259B%259F%25E7%259C%258B%25E5%2588%25B0%25E4%25B8%25AD%25E5%259B%25BD%25E5%2590%2591%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E4%25BE%259B%25E5%25BA%2594%25E5%2586%259B%25E6%25B0%2591%25E4%25B8%25A4%25E7%2594%25A8%25E4%25BA%25A7%25E5%2593%2581%25E7%259A%2584%25E8%25BF%25B9%25E8%25B1%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1%20-%20https%3A%2F%2Frfi.my%2FAX2t.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1%20-%20https%3A%2F%2Frfi.my%2FAX2t.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX2t.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 00:32</div><img src="https://s.rfi.fr/media/display/8e9d3e60-c1a1-11ee-9b11-005056a90284/w:1280/p:16x9/AP23199673095971.jpg"><p><strong>美国国务院发言人米勒（Matthew Miller）4月19日通过声明宣布，“根据针对大规模杀伤性武器及其运载工具扩散者的第13382号行政命令，我们正在指定四个实体。这些实体——三个位于中华人民共和国（PRC），一个位于白俄罗斯——向巴基斯坦的弹道导弹计划，包括其远程导弹计划提供了导弹适用物品”。他称，“美国致力于加强全球防扩散机制，采取行动破坏支持令人担忧的扩散活动的采购网络”。        </strong></p><div><p>米勒在声明中表示：“我们今天指定的实体：明斯克轮式拖拉机厂、西安龙德科技发展有限公司、天津Creative Source国际贸易有限公司（Tianjin Creative Source International Trade Co Ltd）和北京固鸿科技有限公司（Granpect Co. Ltd.），这些实体参与的活动或交易对巴基斯坦扩散大规模杀伤性武器或其运载工具，包括制造、获取、拥有、开发、运输、转移或使用此类物项的任何努力，起到了实质性作用，或构成了实质性作用的风险”。</p><p>该声明称：“美国与其他伙伴密切合作，致力于加强全球防扩散机制，无论大规模杀伤性武器的扩散网络出现在何处，都要对其进行威慑和瓦解”。根据相关法律规定，被指定人员在美国境内或由美国人拥有或控制的所有财产和财产权益均被封锁，必须向美国财政部海外资产控制办公室（OFAC）报告。</p><p>此外，所有直接或间接拥有一个或多个被封锁者50%或以上所有权的个人或实体也会被封锁。美国人或在美国境内，或过境进行的所有交易，凡涉及被指定者或在其他方面被封锁者的任何财产或财产权益的，均被禁止，除非获得美国财政部海外资产控制办公室颁发的一般或特定许可证的授权或豁免。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E6%25B6%2589%25E5%25B7%25B4%25E5%259F%25BA%25E6%2596%25AF%25E5%259D%25A6%25E5%25BC%25B9%25E9%2581%2593%25E5%25AF%25BC%25E5%25BC%25B9%25E8%25AE%25A1%25E5%2588%2592-%25E7%25BE%258E%25E5%259B%25BD%25E5%2588%25B6%25E8%25A3%25814%25E5%25AE%259E%25E4%25BD%2593%25E5%258C%2585%25E6%258B%25AC3%25E5%25AE%25B6%25E4%25B8%25AD%25E4%25BC%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81%20-%20https%3A%2F%2Frfi.my%2FAX5W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81%20-%20https%3A%2F%2Frfi.my%2FAX5W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
