--- a/articles/rfi/999956.md
+++ b/articles/rfi/999956.md
@@ -1,5 +1,5 @@
-<!--1713640502000-->
-[伊朗-以色列：以色列谨慎回应，似乎是为了让德黑兰可以选择不回应 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240419-%E4%BC%8A%E6%9C%97-%E4%BB%A5%E8%89%B2%E5%88%97-%E4%BB%A5%E8%89%B2%E5%88%97%E8%B0%A8%E6%85%8E%E5%9B%9E%E5%BA%94%EF%BC%8C%E4%BC%BC%E4%B9%8E%E6%98%AF%E4%B8%BA%E4%BA%86%E8%AE%A9%E5%BE%B7%E9%BB%91%E5%85%B0%E5%8F%AF%E4%BB%A5%E9%80%89%E6%8B%A9%E4%B8%8D%E5%9B%9E%E5%BA%94)
+<!--1713651301000-->
+[内塔尼亚胡:美国对以色列的援助“捍卫了西方文明”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1-%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9-%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E)
 ------
 
-<div>20/04/2024 - 00:34</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>周五，伊朗军事地点附近传出了爆炸声，目前尚不清楚伊朗所受袭击的规模和性质。德黑兰当局对爆炸轻描淡写，以色列政府和军队则还没有对此次袭击发表评论，也没有宣称对伊朗领土上的爆炸负责。自伊朗在上周六袭击以色列以来，国际社会一直在呼吁以色列做出温和的反应，以免整个地区都燃烧起来。                    </strong></p><div><p>法国世界报记者加扎尔·戈尔希里（Ghazal Golshiri）以及该报耶路撒冷通讯员路易斯·安伯特（Louis Imbert）联合写道，4月19日星期五一大早，以色列就伊朗4月13日对以色列领土发动的无人机和导弹袭击做出了回应。</p><p>据报道，伊朗中部城市伊斯法罕（Ispahan）附近发生爆炸，这里有多个军事基地，包括核设施和弹道导弹设施。4月14日，从这些军事地点有拍摄到导弹发射，射向至少一个以色列空军基地。</p><p>伊斯法罕市的一名居民告诉法国《世界报》说，他感受到了强烈的震动，他最初认为“是发生了地震。”隶属于伊朗革命卫队的法尔斯通讯社则提到“伊斯法罕陆军战斗机基地附近发生了三起爆炸”，并声称伊朗启动了拦截可能的无人机的防空系统。法尔斯通讯社还指出，另一个可疑飞行物体让距离一炼油厂几公里的大不里士（Tabriz，西北）的防空系统也被启动了。</p><p>然而，德黑兰当局对以色列的军事回应轻描淡写，至今，对以色列军事回应的性质和方式，外界依然不确定。</p><p>伊朗总统莱希周五发表讲话但没有提及爆炸事件。伊朗总统莱希周五在达姆甘市向数百人发表讲话，非常简短地提及了上周末伊朗对以色列发动前所未有的无人机和导弹袭击后中东紧张的国际局势，但没有提到几个小时前的爆炸事件。</p><p>伊朗媒体周五援引伊斯法罕陆军指挥官西亚沃什·米汉杜斯特（Siavosh Mihandoust）的话说，当地居民听到的爆炸声来自防空系统。这位指挥官坚称，“我们没有受到任何损害，也没有发生任何事件。”自周五黎明时分起，伊朗官方电视台就派遣记者前往伊斯法罕市中心，以表明那里局势平静，日常生活一切照常。</p><p><strong>伊朗说没有导弹袭击</strong></p><p>一名经常代表伊朗革命卫队发言的网络空间最高委员会的一名官员则否认此次袭击涉及导弹袭击。周五，以色列既没有证实也没有否认这一消息。这名伊朗官员声称，有无人机被击落，但没有导弹袭击。他说，被击落的无人机射程较短，是从伊朗境内发射的。一位伊朗分析人士在伊朗国家电视台上说，被击落的“微型无人机”是由“伊朗领土上的渗透者”发射的，他说，以色列国外情报机构有能力这么做，至少在过去，以色列国外情报机构已经进行过一次这一类型的攻击。在黎明时暂停的德黑兰机场的航班，原定周五上午恢复。</p><p>在以色列一边，截至周五晚上，以色列政府和军队尚没有对此次袭击发表评论，也没有宣称对伊朗领土上的爆炸负责。不过，以色列国家安全部长伊塔马尔·本·格维尔(Itamar Ben Gvir)对以色列回应的明显“虚弱”表示遗憾。本·格维尔来自宗教极右翼，被排除在战时内阁之外，他使用了一个希伯来语足球用语，表示射门缺乏力量。这显示，伊朗境内的爆炸，以色列脱不了干系。但以色列的回应既精确又规模有限，似乎以色列并不希望局势有新的升级。</p><p>就目前的情况来看，以色列似乎选择了相对谨慎的回应，以便让德黑兰当局可以选择不回应。</p><p><strong>叙利亚也遭遇了空袭</strong></p><p>另外，周五，除了伊朗，叙利亚也遭遇了空袭。叙利亚国家通讯社SANA援引军方消息人士的话称，以色列在夜间还袭击了叙利亚南部的防空系统，造成了一些“物质损失”。以色列这是为了表明它将继续对伊朗的地区盟友采取密集的军事行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
+<div>20/04/2024 - 23:23</div><img src="https://s.rfi.fr/media/display/c626eb40-f024-11ee-b825-005056bf30b7/w:1280/p:16x9/2024-03-31T135038Z_1609163870_RC2WC5A0S4MC_RTRMADP_3_ISRAEL-POLITICS-NETANYAHU.JPG"><p><strong>在以色列与巴勒斯坦哈马斯战争持续并与伊朗紧张加剧的背景下，美国众议院周六(4月20日）通过对乌克兰、以色列和台湾950亿美元庞大对外援助法案，其中包括向以色列提供264亿美元新的军事援助。以色列总理内塔尼亚胡称，新军事援助是“捍卫了西方文明”。        </strong></p><div><p>法新社报道，美国国会众院周六以366票对58票通过"以色列安全补充法案"（Israel Security Supplemental bill），以向以色列提供264亿美元援助。</p><p>以色列总理内塔尼亚胡立即对此表示欢迎。内塔尼亚胡在X上写道：“美国国会刚刚以压倒性多数通过了一项广受欢迎的援助法案，该法案表明了两党对以色列的强有力支持并捍卫了西方文明。”</p><p>以色列外长卡茨也对美国众议院的投票表示欢迎，卡茨在他的X账户上表示，这次投票“证明了以色列和美国之间的密切关系和战略伙伴关系，并向我们的敌人发出了强烈的信息”。</p><p>法新社称，在以色列周五向伊朗发起报复性袭击后，伊朗和以色列似乎正在摆脱可能的紧张升级，德黑兰则是淡化了以色列袭击的程度范围。伊朗中部伊斯法罕地区的一个军事基地附近周五凌晨传出爆炸，美国媒体援引美国官员的话称，这是以色列针对4月13日伊朗对以色列发动无人机和导弹袭击而采取的行动。 以色列此前誓言要让伊朗为袭击以色列付出代价。</p><p>与此同时，以色列军队对被围困的加沙地带发动了数十次袭击，据民防部门称，其中一次袭击导致该地区南部拉法同一家庭的九名成员死亡，其中包括儿童。</p><p>另据巴勒斯坦卫生部门周六表示，以色列军队自进入约旦河西岸城市图勒凯尔姆开展军事行动以来，已造成至少13名巴勒斯坦人死亡。</p><p>巴勒斯坦表示，以军部分撤离图勒凯尔姆后，救援人员进入冲突现场，发现死者遗体。</p><p>巴勒斯坦传媒报道，以巴在图勒凯尔姆冲突期间，以军阻止救援人员进入现场救治。以色列传媒表示，行动期间，以军多次遭到巴人武装伏击，至少有9名以军士兵受伤。</p><p>另据报道，土耳其外长菲丹周六与埃及外长舒凯里在土耳其伊斯坦布尔会晤，讨论巴以冲突、伊朗和以色列的对抗、加沙地带的人道主义局势以及双边关系等问题。</p><p>菲丹会晤后表示，巴以冲突导致全球物流链受冲击，物价飞涨，为防止外溢效应引发全球性经济危机，必须果断采取措施，从根本上解决问题。他并表示，当务之急是实现两国方案。</p><p>舒凯里表示，巴以冲突有可能蔓延，伊以对抗局势已加剧，埃及方面呼吁各方保持克制，冲突、互不理解和暴力应马上停止。他称，伊以对抗转移了国际社会对加沙地带局势的关注。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDT.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AF%25B9%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E7%259A%2584%25E6%258F%25B4%25E5%258A%25A9-%25E6%258D%258D%25E5%258D%25AB%25E4%25BA%2586%25E8%25A5%25BF%25E6%2596%25B9%25E6%2596%2587%25E6%2598%258E&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAXDT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAXDT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDT.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
