--- a/articles/rfi/999984.md
+++ b/articles/rfi/999984.md
@@ -1,5 +1,5 @@
-<!--1713545105000-->
-[副首相：英面临来自中、伊、俄、朝等敌对国家的诸多威胁](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%89%AF%E9%A6%96%E7%9B%B8-%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD-%E4%BC%8A-%E4%BF%84-%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81)
+<!--1713552301000-->
+[美众院即将投票对乌援助法案 五角大楼：有些军援几天内就能运抵乌克兰](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88-%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC-%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0)
 ------
 
-<div>18/04/2024 - 22:54</div><img src="https://s.rfi.fr/media/display/d267f044-fdc5-11ee-addf-005056bfb2b6/w:1280/p:16x9/bfb16505dff5e264d5c04abde2a58861fef405e57c416b42c8f1f0c36b35894a.png"><p><strong></strong></p><div><p>就教育界，他特别表示，他希望大学副校长能够收到安全部门的简报，以便更好地“了解问题的严重程度”。</p><p>道登还希望就敏感领域的研究安全展开咨询，提高大学经费的透明度，并研究现有的国家安全和外国投资法律如何适用于教师。</p><p>另一方面，这位部长强调说，“新冠疫情和俄罗斯在乌克兰的战争暴露了全球供应链的相互关联性，以及在俄罗斯推高天然气价格和中国实施经济胁迫行为的情况下，这种相互关联性的程度”。</p><p>道登宣布，英国当局将审查当前对半导体等新兴或战略技术的出口管制。英国政府已利用《国家安全与投资（NSI）法案》阻止中国实体多次收购英国半导体制造商的尝试。</p><p>英国副首相奥利弗·道登（Oliver James Dowden）表示，“我们必须确保我们在国外销售的技术产品不会被用来损害我们的国家利益”。</p><p>他继续说道，“我们看到有人蓄意利用贸易限制作为胁迫武器”；而“中国针对立陶宛和俄罗斯针对厄瓜多尔的做法”就是实例。他还补充说，“我们还看到了公共部门采购构成国家安全风险的例子，从监控系统到电信基础设施”。</p><p>他坚称：“这就是为什么我禁止华为参与我们的 5G 网络，并禁止中国监控设备进入主要政府站点。”伦敦于 2020 年 7 月宣布将中国巨头华为排除在其 5G 网络之外，理由是该国存在安全风险。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtB.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%2589%25AF%25E9%25A6%2596%25E7%259B%25B8-%25E8%258B%25B1%25E9%259D%25A2%25E4%25B8%25B4%25E6%259D%25A5%25E8%2587%25AA%25E4%25B8%25AD-%25E4%25BC%258A-%25E4%25BF%2584-%25E6%259C%259D%25E7%25AD%2589%25E6%2595%258C%25E5%25AF%25B9%25E5%259B%25BD%25E5%25AE%25B6%25E7%259A%2584%25E8%25AF%25B8%25E5%25A4%259A%25E5%25A8%2581%25E8%2583%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAWtB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAWtB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtB.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 20:25</div><img src="https://s.rfi.fr/media/display/48c829c8-fe77-11ee-9ad8-005056a90284/w:1280/p:16x9/AP24109824140967.jpg"><p><strong>据两位美国官员透露，五角大楼正准备迅速批准一项对乌克兰的武器援助计划，其中包括急需的火炮和防空系统，此刻正值美国国会正在排队投票以通过对乌的额外军援拨款。        </strong></p><div><p>上述两位美国官员向政客新闻网表示，拜登政府尚未最终决定这批资金的规模和内容，他们因涉及敏感的内部讨论而被允许匿名。但其中一位官员说，五角大楼官员正在努力汇总一揽子美国装备，一旦立法通过并经总统签署，就能迅速通过官僚程序。该官员说：“他们将很快向（奥斯汀）防长提出建议，随后很快就会提交给总统”。</p><p>两位官员说，这笔资金将包括用于补充乌克兰武器库的火炮和防空系统，这将是美国自去年12月因国会对总统追加援助的要求停滞不前而耗尽资金以来的第二笔资金。白宫上个月批准了一项总额为3亿美元的对乌紧急援助计划，使用的是之前合同节省下来的成本。</p><p>第一位官员说，许多美国武器已经存放在欧洲各地的仓库中，可以立即运往乌克兰。有些物资几天内就能运抵乌克兰，有些则可能需要数周时间。</p><p>美国国防部发言人莱德（Patrick Ryder）少将拒绝透露即将到来的一揽子计划的具体内容，但在周四告诉记者，美国拥有“非常强大的物流网络，使我们能够非常迅速地运送物资”——可能在几天之内。莱德说，“我们当然理解并重视这种紧迫性，并已做好迅速行动的准备”。</p><p>美国众议院即将于周六就四项法案进行投票，这些法案将拨款950亿美元用于援助乌克兰、以色列和印太地区的合作伙伴。一旦获得通过，参议院还必须在拜登签署之前批准该援助方案。在用于乌克兰的近610亿美元中，约480亿美元将拨给五角大楼，用于武装基辅、补充武器和支付在欧洲的军事行动。该法案为美军提供了232亿美元，用于补充提供给乌克兰的武器装备库存。</p><p>另有138亿美元将用于“乌克兰安全援助计划”，供五角大楼为基辅购买新武器。还有113亿美元将用于加强在欧洲的美军行动。该立法重新授权五角大楼将价值78亿美元的现有武器从库存中运往乌克兰，然后由一揽子计划中增加的资金取代。</p><p>美国国防部负责国际安全事务的助理防长沃兰德（Celeste Wallander）最近告诉议员们，一旦国会最终批准援助，五角大楼将迅速开始运送弹药、炮弹和防空武器。</p><p>沃兰德对美国众议院军事委员会说：“在（美国欧洲司令部）和（美国运输司令部）的支持下，我们将能够在一两周内立即开始向乌克兰提供弹药、炮弹和拦截器”。</p><p>拜登政府多名高官本周强调，如果美国国会不通过额外拨款，乌克兰将很快陷入困境。美国中情局局长比尔·伯恩斯（Bill Burns）说，如果没有美国的新武器援助，乌克兰可能在今年年底前被击败。</p><p>美国国防部长奥斯汀（Lloyd Austin）则告诉议员们，在乌军苦于弹药短缺之际，俄军正在取得进展。奥斯汀指出：“我们已经看到战场上的局势开始向对俄罗斯有利的方向转变。我们看到他们正在逐步取得进展。我们看到乌克兰人在坚守阵地方面受到了挑战”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4K.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E4%25BC%2597%25E9%2599%25A2%25E5%258D%25B3%25E5%25B0%2586%25E6%258A%2595%25E7%25A5%25A8%25E5%25AF%25B9%25E4%25B9%258C%25E6%258F%25B4%25E5%258A%25A9%25E6%25B3%2595%25E6%25A1%2588-%25E4%25BA%2594%25E8%25A7%2592%25E5%25A4%25A7%25E6%25A5%25BC-%25E6%259C%2589%25E4%25BA%259B%25E5%2586%259B%25E6%258F%25B4%25E5%2587%25A0%25E5%25A4%25A9%25E5%2586%2585%25E5%25B0%25B1%25E8%2583%25BD%25E8%25BF%2590%25E6%258A%25B5%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4K.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
