--- a/articles/rfi/999987.md
+++ b/articles/rfi/999987.md
@@ -1,5 +1,5 @@
-<!--1713543301000-->
-[布林肯: 中国不能一边希望与欧洲友好 一边助长对欧洲安全的最大威胁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E5%B8%83%E6%9E%97%E8%82%AF-%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD-%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81)
+<!--1713545104000-->
+[德国逮捕2俄间谍计划攻击美军基地](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0)
 ------
 
-<div>19/04/2024 - 17:33</div><img src="https://s.rfi.fr/media/display/660bc7fe-fe56-11ee-9a83-005056bf30b7/w:1280/p:16x9/AP24110423238580%20%281%29.jpg"><p><strong>七国集团（G7）在意大利卡普里岛举行外长会议，根据周五的会议最后公报，G7对中国向俄罗斯转让材料助其在乌克兰的战争机器表示"强烈关切"。        </strong></p><div><p>在周五的新闻发布会上，美国国务卿安东尼-布林肯指责中国间接"助长"了在乌克兰的冲突。布林肯说：“中国如果一方面希望与欧洲和其他国家保持友好关系，就不能另一方面助长冷战结束以来对欧洲安全的最大威胁”。</p><p>据美国外交人士称，布林肯是在一次专门讨论支持乌克兰抵抗俄罗斯入侵的工作会议上表达了对中国向俄罗斯提供军民两用产品支持问题的担忧，并表示支持两年多来一直与俄罗斯军队作战的乌克兰。</p><p>法新社4月19日报道，G7外长"在会议结束时发表的公报中说："我们对中国公司向俄罗斯转让军民两用材料和武器部件深表关切，俄罗斯正利用这些材料和部件提高其军事生产。</p><p>G7外长指出，中国的转让使俄罗斯得以重建和振兴其国防工业，对乌克兰和国际和平与安全构成威胁"，他们对此表示遗憾。</p><p>G7敦促"中国因该确保停止这种支持，因为这将延长冲突，增加俄罗斯对其邻国的威胁"。</p><p>七国集团由美国、日本、加拿大、法国、德国和今年担任轮值主席国的意大利组成。</p><p>该报道说，特别是，美国人希望欧洲国家能向中国政府施压，迫使其减少对俄罗斯的军事支持，因为华盛顿自己也承认，俄罗斯军队正在乌克兰领土上占据优势。</p><p>美国说，几个月来，它一直在目睹中国向俄罗斯转让装备，莫斯科正利用这些装备重建其国防工业，这在乌克兰战场上得到了反映。</p><p>华盛顿给中国划定了一条红线，即不得直接提供武器给俄罗斯用于乌克兰战争--迄今为止还没有看到相反的证据。</p><p>但在中俄关系加深的背景下，美国越来越多地谴责北京通过“迂回渠道”支持俄罗斯，并将中国这些支持与俄罗斯在乌克兰的战争建立直接的关联。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX2N.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E5%25B8%2583%25E6%259E%2597%25E8%2582%25AF-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25B8%258D%25E8%2583%25BD%25E4%25B8%2580%25E8%25BE%25B9%25E5%25B8%258C%25E6%259C%259B%25E4%25B8%258E%25E6%25AC%25A7%25E6%25B4%25B2%25E5%258F%258B%25E5%25A5%25BD-%25E4%25B8%2580%25E8%25BE%25B9%25E5%258A%25A9%25E9%2595%25BF%25E5%25AF%25B9%25E6%25AC%25A7%25E6%25B4%25B2%25E5%25AE%2589%25E5%2585%25A8%25E7%259A%2584%25E6%259C%2580%25E5%25A4%25A7%25E5%25A8%2581%25E8%2583%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAX2N.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAX2N.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX2N.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B8%83%E6%9E%97%E8%82%AF%3A%20%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%83%BD%E4%B8%80%E8%BE%B9%E5%B8%8C%E6%9C%9B%E4%B8%8E%E6%AC%A7%E6%B4%B2%E5%8F%8B%E5%A5%BD%20%E4%B8%80%E8%BE%B9%E5%8A%A9%E9%95%BF%E5%AF%B9%E6%AC%A7%E6%B4%B2%E5%AE%89%E5%85%A8%E7%9A%84%E6%9C%80%E5%A4%A7%E5%A8%81%E8%83%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 22:44</div><img src="https://s.rfi.fr/media/display/7c78ebe4-fdc4-11ee-a0fd-005056bfb2b6/w:1280/p:16x9/66210160d77c5330d1724475.png"><p><strong></strong></p><div><p>两名嫌犯是在德国东南部的拜罗伊特(Bayreuth)被拘捕的。德国检方18ri 表示，2名德俄双重国籍人士因涉嫌策划在德国进行蓄意破坏攻击而被捕，两人锁定目标包括美国军事设施，目的为了削弱德国对乌克兰的军事支持。</p><p>检察官说，这两名男子的名字仅证实为狄特尔S.（Dieter S.）和亚历山大 J.（Alexander J.）。正在布鲁塞尔开会的德国总理朔尔茨表示，“我们永远不会接受间谍活动在德国发生”。 俄罗斯方面则在其驻德国大使馆在 X 上发布的消息，谴责这种“荒唐可笑”以及缺乏“证据”的指控。</p><p>据《明镜周刊》报道，嫌疑人以及德国联邦国防军车队尤其关注巴伐利亚美军格拉芬沃尔(Grafenwöhr)基地，乌克兰士兵在那里接受使用美国艾布拉姆斯主战坦克的训练。</p><p>据《明镜周刊》报道，主嫌犯迪特尔·S. (Dieter S.) 现年 39 岁，自 2023 年 10 月以来一直在与一名与俄罗斯情报部门有联系的人员交换信息，以期在德国领土上实施可能的破坏活动。 据检方称，他的同伙亚历山大·J.(Alexander J.)现年 37 岁，从 2024 年 3 月底开始和迪特尔有密切的联系。</p><p>检察官称，“这些行动的目的尤其是破坏德国对乌克兰对抗俄罗斯侵略战争的军事支持”。 据报道，迪特·S. 声称自己准备好“对德国的军事基础设施和工业场所进行爆炸袭击和纵火袭击”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt3.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%25BE%25B7%25E5%259B%25BD%25E9%2580%25AE%25E6%258D%25952%25E4%25BF%2584%25E9%2597%25B4%25E8%25B0%258D%25E8%25AE%25A1%25E5%2588%2592%25E6%2594%25BB%25E5%2587%25BB%25E7%25BE%258E%25E5%2586%259B%25E5%259F%25BA%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAWt3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt3.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BE%B7%E5%9B%BD%E9%80%AE%E6%8D%952%E4%BF%84%E9%97%B4%E8%B0%8D%E8%AE%A1%E5%88%92%E6%94%BB%E5%87%BB%E7%BE%8E%E5%86%9B%E5%9F%BA%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
