--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-21 [至少14名巴勒斯坦人死于西岸的暴力](/articles/voa/1016233.md)
+
 4-21 [马尔代夫将在中印竞争的阴影下举行选举投票](/articles/voa/1016234.md)
 
 4-21 [乌克兰对俄罗斯8个地区发动无人机攻击，3人丧生](/articles/voa/1016235.md)
@@ -598,6 +600,4 @@
 4-9 [台湾年度汉光演习在即，演练反制敌方由演转战能力和建立海上击杀链](/articles/voa/1016531.md)
 
 4-9 [习近平会见俄罗斯外长，表示与俄罗斯继续保持密切交往](/articles/voa/1016532.md)
-
-4-9 [菲律宾示威者抗议北京在南中国海的侵略行径，踩踏习近平假人](/articles/voa/1016533.md)
 
